<resources>
    <string name="app_name">Hermes Android Client</string>
    <string name="prompt_pin">Give your pin</string>
    <string name="set_pin">Set a pin</string>
    <string name="reset_pin">Repeat your pin</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome again</string>
    <string name="error_invalid_email">This pin is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="event_log_activity">EventLogActivity</string>
    <string name="setup_form_title">Setup the client</string>
    <string name="setup_button_text">Setup</string>
    <string name="email_setup_input">Your email</string>
    <string name="auth_preference_key">auth</string>
    <string name="iota_preference_key">iota</string>
    <string name="auth_hashed_pin">hashed_pin</string>
    <string name="auth_private_key">private_key</string>
    <string name="auth_seed">seed</string>
    <string name="title_activity_event_log">Event Log</string>
    <string name="title_activity_sensor_list">Sensor List</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_sensor">Sensor Info</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="remote_service_label">Hermes</string>
    <string name="remote_service_started">service started</string>
    <string name="remote_service_stopped">service stopped</string>
    <string name="remote_service_channel_name">hermes service notifications channel</string>
    <string name="remote_service_channel_description">a channel to keep the service running</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="uptime">Uptime</string>
    <string name="samples_broadcast">Samples Broadcast</string>
    <string name="iota_received">IOTA Received</string>
    <string name="active_sensors">Active Sensors</string>
    <string name="button">Button</string>
    <string name="show_seed">Show seed</string>
    <string name="show_key">Show Key</string>
    <string name="title_activity_setup_load">SetupLoadActivity</string>
    <string name="iota_root_address">IOTA Root Address</string>
    <string name="failedBroadcastNumDef">0</string>
    <string name="failedBroadcastNumLabel">Failed Broadcasts</string>
    <string name="activeSensorNumDef">0</string>
    <string name="uptimeNumDef">0</string>
    <string name="dataPacketNumDef">0</string>
    <string name="dataPacketAttachedNumDef">0</string>
    <string name="dataPacketAttachedNumLabel">Samples Attached</string>
    <string name="iotaReceivedDef">0</string>
</resources>
