<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.hermes.fragments.DashboardFragment" android:id="@+id/frameLayout"
        android:background="@color/dividerColor">
    <Button
            android:text="@string/button"
            android:layout_width="223dp"
            android:layout_height="wrap_content" android:id="@+id/serviceActivationButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:background="@color/green"
            tools:text="Stop service" android:layout_marginTop="30dp" app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="354dp"
            android:layout_height="343dp" app:layout_constraintTop_toBottomOf="@+id/serviceActivationButton"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/dashboardWidgetHolder"
    >

        <androidx.cardview.widget.CardView
                android:layout_width="116dp"
                android:layout_height="104dp"
                android:background="@android:color/white"
                android:id="@+id/sensorsCard" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="138dp"
                        android:layout_height="43dp"
                        android:id="@+id/activeSensorNum" tools:text="5"
                        android:fontFamily="@font/roboto_condensed_bold" android:textSize="36sp"
                        android:textAlignment="center" android:textStyle="bold"
                        android:background="@android:color/white"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/activeSensorLabel" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <View
                        android:id="@+id/divider4"
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/activeSensorLabel"
                        app:layout_constraintTop_toBottomOf="@+id/activeSensorNum" android:layout_marginTop="9dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/active_sensors"
                        android:layout_width="125dp"
                        android:layout_height="24dp" android:id="@+id/activeSensorLabel"
                        android:fontFamily="@font/roboto_condensed_regular" android:textSize="16sp"
                        android:textAlignment="center"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/activeSensorNum" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="104dp"
                android:id="@+id/uptimeCard" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sensorsCard" android:layout_marginStart="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@android:color/white">

                <TextView
                        android:layout_width="227dp"
                        android:layout_height="43dp" android:id="@+id/uptimeNum" tools:text="20 minutes"
                        android:fontFamily="@font/roboto_condensed_bold" android:textSize="36sp"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.494" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"/>
                <View
                        android:id="@+id/divider3"
                        android:layout_width="204dp"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/uptimeLabel"
                        app:layout_constraintTop_toBottomOf="@+id/uptimeNum" android:layout_marginTop="9dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
                <TextView
                        android:text="@string/uptime"
                        android:layout_width="224dp"
                        android:layout_height="23dp" android:id="@+id/uptimeLabel"
                        app:layout_constraintTop_toBottomOf="@+id/uptimeNum" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:textSize="16sp" android:textAlignment="center"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="177dp"
                android:layout_height="104dp" app:layout_constraintTop_toBottomOf="@+id/sensorsCard"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:background="@android:color/white"
                android:id="@+id/packagesCard"
                android:layout_marginTop="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="185dp"
                        android:layout_height="52dp" android:id="@+id/dataPacketNum" tools:text="100"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:textSize="36sp"
                        android:fontFamily="@font/roboto_condensed_bold" android:textAlignment="center"/>
                <View
                        android:id="@+id/divider5"
                        android:layout_width="161dp"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/dataPacketLabel" android:layout_marginTop="9dp"
                        app:layout_constraintTop_toBottomOf="@+id/dataPacketNum"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/samples_broadcast"
                        android:layout_width="184dp"
                        android:layout_height="23dp" android:id="@+id/dataPacketLabel"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/dataPacketNum"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/roboto_condensed_regular" android:textAlignment="center"
                        android:textSize="16sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="158dp"
                android:layout_height="104dp"
                app:layout_constraintTop_toBottomOf="@+id/uptimeCard"
                app:layout_constraintStart_toEndOf="@+id/packagesCard"
                android:layout_marginStart="8dp" android:id="@+id/profitsCard" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@android:color/white">

                <TextView
                        android:layout_width="123dp"
                        android:layout_height="52dp" android:id="@+id/iotaReceived"
                        android:background="@android:color/white" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" tools:text="10"
                        android:fontFamily="@font/roboto_condensed_bold" android:textSize="36sp"
                        android:textAlignment="center"/>
                <View
                        android:id="@+id/divider6"
                        android:layout_width="94dp"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"
                        app:layout_constraintTop_toBottomOf="@+id/iotaReceived"
                        android:layout_marginTop="9dp" app:layout_constraintBottom_toTopOf="@+id/iotaReceivedLabel"
                        android:layout_marginBottom="9dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@string/iota_received"
                        android:layout_width="135dp"
                        android:layout_height="25dp" android:id="@+id/iotaReceivedLabel"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/iotaReceived" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:fontFamily="@font/roboto_condensed_regular" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
                        android:textSize="16sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="340dp"
                android:layout_height="106dp"
                app:layout_constraintTop_toBottomOf="@+id/packagesCard"
                android:id="@+id/rootAddressCard"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="6dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:background="@android:color/white">

                <TextView
                        android:layout_width="312dp"
                        android:layout_height="66dp" android:id="@+id/rootAddress"
                        android:background="@android:color/white" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="EXVJYBXDZDZNQ9SB99ETXQVMHFYOMVJW9DLNGLV9VRSTVRDOVPJXPGJFAYDMNP9XMPUPVCBYZTDFH9VMY"
                        android:fontFamily="@font/roboto_condensed_bold" android:textSize="16sp"
                        android:textAlignment="center"/>
                <View
                        android:id="@+id/divider7"
                        android:layout_width="320dp"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"
                        app:layout_constraintBottom_toTopOf="@+id/rootAddressCardLabel"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/rootAddress"/>
                <TextView
                        android:text="@string/iota_root_address"
                        android:layout_width="135dp"
                        android:layout_height="25dp" android:id="@+id/rootAddressCardLabel"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/rootAddress"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:fontFamily="@font/roboto_condensed_regular" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
                        android:textSize="16sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/show_seed"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/showSeedButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.502"
            android:background="@android:color/holo_blue_bright" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/dashboardWidgetHolder"/>
    <Button
            android:text="@string/show_key"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/privKeyButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@android:color/holo_blue_bright"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/showSeedButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
